Simple ruby app for storing the paragraphs

--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,19 @@
 node_modules/
 *.sublime-workspace
 bundle.js
+
+server/.bundle
+
+# Ignore the default SQLite database.
+server/db/*.sqlite3
+server/db/*.sqlite3-journal
+
+# Ignore all logfiles and tempfiles.
+server/log/*.log
+server/tmp
+
+# Extra files to ignore
+doc/
+*.swp
+*~
+.DS_Store
