--- a/client/package.json
+++ b/client/package.json
@@ -21,12 +21,14 @@
     "babel-preset-react": "^6.3.13",
     "chai": "^3.4.1",
     "chai-immutable": "^1.5.3",
+    "css-loader": "^0.23.1",
     "jsdom": "^7.2.2",
     "mocha": "^2.3.4",
     "react-addons": "^0.9.0",
     "react-addons-test-utils": "^0.14.6",
     "react-dom": "^0.14.6",
     "react-hot-loader": "^1.3.0",
+    "style-loader": "^0.13.0",
     "webpack": "^1.12.11",
     "webpack-dev-server": "^1.14.1"
   },
