--- a/server/gemfile
+++ b/server/gemfile
@@ -27,6 +27,9 @@ gem 'active_model_serializers'
 # For materialized views
 gem 'ancestry'
 
+# CORS 
+gem 'rack-cors', :require => 'rack/cors'
+
 group :doc do
   # bundle exec rake doc:rails generates the API under doc/api.
   gem 'sdoc', require: false
