--- a/server/gemfile
+++ b/server/gemfile
@@ -1,7 +1,7 @@
 source 'https://rubygems.org'
 
 # Bundle edge Rails instead: gem 'rails', github: 'rails/rails'
-gem 'rails', '4.1'
+gem 'rails', '~>  4.2'
 
 # Use sqlite3 as the database for Active Record
 gem 'sqlite3'
@@ -32,6 +32,10 @@ gem 'rack-cors', :require => 'rack/cors'
 
 # New in Rails 4.1.0
 gem 'tzinfo-data', platforms: [:mingw, :mswin, :x64_mingw]
+
+group :development do
+  gem 'web-console', '~> 2.0'
+end
 
 group :doc do
   # bundle exec rake doc:rails generates the API under doc/api.
